* Cleaning up deprecated Api usage and verified unchecked casts, etc. * Corrected bug in DiscBasedSort to properly handle compression of sort runs    * needs testing    * needs proper aggregation of errors